--- a/Portfolio/css/styles.css
+++ b/Portfolio/css/styles.css
@@ -9,17 +9,25 @@ Text-Color (Black): #000;
 :root {
     --background-color-primary: #c1ffbd;
     --background-color-secondary: #6c4c33;
+    --background-color-grid: lightgray;
     --link-color-primary: #003775;
     --link-color-active: #73360D;
     --link-color-visited: #6A1C0E;
-    --text-color: #000;
+    --button-color-primary: #357b70;
+    --button-color-secondary: #e0b354;
+    --text-color-dark: #000;
+    --text-color-light: #fff;
     --border-color: #000;
+    --sun-primary-color: #edc655;
+    --sun-secondary-color: #fcffad;
+    --sun-tertiary-color: #f76414;
+    --max-width-primary: 700px;
+    --max-width-secondary: 500px;
     --font-size-primary: 16px;
     --line-height-default: 1.6;
     --font-weight-normal: 400;
     --font-weight-bold: 700;
 }
-
 
 * {
     box-sizing: border-box;
@@ -84,8 +92,6 @@ a:active {
     color: var(--link-color-active);
 }
 
-
-
 table, th, td {
     border: 1px solid var(--border-color);
     text-align: center;
@@ -126,8 +132,8 @@ button,
     /* takes the font from the outer container */
     font-family: inherit;
     /* styles the background color, font color, and text decoration (underline, etc.) of the button */
-    background-color: #357b70;
-    color: white;
+    background-color: var(--button-color-primary);
+    color: var(--text-color-light);
     text-decoration: none;
     /*adds spacing to the button (this will be discussed more in-depth later) */
     padding: 10px;
@@ -139,8 +145,8 @@ button,
 }
 
 .button__secondary {
-    background-color: #e0b354;
-    color: #2b2b2b;
+    background-color: var(--button-color-secondary);
+    color: var(--text-color-dark);
 }
 
 button:hover, 
@@ -154,7 +160,7 @@ button:focus,
 }
 
 .profile {
-    max-width: 700px;
+    max-width: var(--max-width-primary);
     margin: 0 auto;
 }
 
@@ -170,7 +176,7 @@ button:focus,
 }
 
 .about {
-    max-width: 700px;
+    max-width: var(--object-max-width);
     margin: 0 auto;
     text-align: center;
 }
@@ -178,17 +184,17 @@ button:focus,
 /* SVG Illustration on About Page */
 .palm-beach {
     height: auto;
-    max-width: 500px;
+    max-width: var(--max-width-secondary);
 
 }
 
 @keyframes color-change-sun {
     0% {
-        fill: #edc655;
+        fill: var(--sun-primary-color);
     } 50% {
-        fill: #fcffad;
+        fill: var(--sun-secondary-color);
     } 100% {
-        fill: #f76414;
+        fill: var(--sun-tertiary-color);
     }
 }
 
@@ -215,7 +221,7 @@ button:focus,
     }
 
     .grid__item {
-        background-color: lightgray;
+        background-color: var(--background-color-grid);
         width: auto;
         min-height: auto;
         margin: 0;
