--- a/Portfolio/css/style.production.css
+++ b/Portfolio/css/style.production.css
@@ -13,29 +13,6 @@ Link-Color (Dark Blue): #003775;
 Text-Color (Black): #000;
 */
 
-:root {
-    --background-color-primary: #c1ffbd;
-    --background-color-secondary: #6c4c33;
-    --background-color-grid: lightgray;
-    --link-color-primary: #003775;
-    --link-color-active: #73360D;
-    --link-color-visited: #6A1C0E;
-    --button-color-primary: #357b70;
-    --button-color-secondary: #e0b354;
-    --text-color-dark: #000;
-    --text-color-light: #fff;
-    --border-color: #000;
-    --sun-primary-color: #edc655;
-    --sun-secondary-color: #fcffad;
-    --sun-tertiary-color: #f76414;
-    --max-width-primary: 700px;
-    --max-width-secondary: 500px;
-    --font-size-primary: 16px;
-    --line-height-default: 1.6;
-    --font-weight-normal: 400;
-    --font-weight-bold: 700;
-}
-
 * {
     -webkit-box-sizing: border-box;
             box-sizing: border-box;
@@ -44,14 +21,22 @@ Text-Color (Black): #000;
 body {
     /* Sans-serif is fallback if Rubik cannot be loaded */
     font-family: 'Rubik', sans-serif;
-    font-weight: var(--font-weight-normal);
-    font-size: var(--font-size-primary);
-    line-height: var(--line-height-default);
-    background-color: var(--background-color-primary);
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.6;
+    background-color: #c1ffbd;
 }
 
-h1, h2, h3 {
-    font-weight: var(--font-weight-bold);
+h1 {
+    font-weight: 700;
+}
+
+h2 {
+    font-weight: 700;
+}
+
+h3 {
+    font-weight: 700;
 }
 
 h1 {
@@ -80,12 +65,12 @@ h3 {
 }
 
 a {
-    color: var(--link-color-primary);
+    color: #003775;
 }
 
 a:visited {
     /* When link has been visited */
-    color: var(--link-color-visited);
+    color: #6A1C0E;
 }
 
 a:hover, a:focus {
@@ -97,11 +82,25 @@ a:hover, a:focus {
 a:active {
     /* While link is clicked */
     /* Should be placed AFTER a:hover */
-    color: var(--link-color-active);
+    color: #73360D;
 }
 
-table, th, td {
-    border: 1px solid var(--border-color);
+table {
+    border: 1px solid #000;
+    text-align: center;
+    line-height: normal;
+    margin: inherit;
+}
+
+th {
+    border: 1px solid #000;
+    text-align: center;
+    line-height: normal;
+    margin: inherit;
+}
+
+td {
+    border: 1px solid #000;
     text-align: center;
     line-height: normal;
     margin: inherit;
@@ -144,29 +143,47 @@ table, th, td {
     text-align: center;
 }
 
-button, 
+button {
+    /* overwrites browser defaults and resets the border */
+    border: none;
+    /* takes the font from the outer container */
+    font-family: inherit;
+    /* styles the background color, font color, and text decoration (underline, etc.) of the button */
+    background-color: #357b70;
+    color: #fff;
+    text-decoration: none;
+    /*adds spacing to the button (this will be discussed more in-depth later) */
+    padding: 10px;
+    border-radius: 3px;
+    /* gives the button a bottom border with a width of 2px, a type of solid, and a color in RGBA format */
+    border-bottom: 2px solid #000;
+    /* transition: [transition-property] [transition-duration] [transition-timing-function]-Default is "Ease" [transition-delay]-Default is 0); */
+    -webkit-transition: 0.5s opacity;
+    transition: 0.5s opacity;
+}
+
 .button {
     /* overwrites browser defaults and resets the border */
     border: none;
     /* takes the font from the outer container */
     font-family: inherit;
     /* styles the background color, font color, and text decoration (underline, etc.) of the button */
-    background-color: var(--button-color-primary);
-    color: var(--text-color-light);
+    background-color: #357b70;
+    color: #fff;
     text-decoration: none;
     /*adds spacing to the button (this will be discussed more in-depth later) */
     padding: 10px;
     border-radius: 3px;
     /* gives the button a bottom border with a width of 2px, a type of solid, and a color in RGBA format */
-    border-bottom: 2px solid var(--border-color);
+    border-bottom: 2px solid #000;
     /* transition: [transition-property] [transition-duration] [transition-timing-function]-Default is "Ease" [transition-delay]-Default is 0); */
     -webkit-transition: 0.5s opacity;
     transition: 0.5s opacity;
 }
 
 .button__secondary {
-    background-color: var(--button-color-secondary);
-    color: var(--text-color-dark);
+    background-color: #e0b354;
+    color: #000;
 }
 
 button:hover, 
@@ -180,7 +197,7 @@ button:focus,
 }
 
 .profile {
-    max-width: var(--max-width-primary);
+    max-width: 700px;
     margin: 0 auto;
 }
 
@@ -198,7 +215,7 @@ button:focus,
 }
 
 .about {
-    max-width: var(--object-max-width);
+    max-width: undefined;
     margin: 0 auto;
     text-align: center;
 }
@@ -206,27 +223,27 @@ button:focus,
 /* SVG Illustration on About Page */
 .palm-beach {
     height: auto;
-    max-width: var(--max-width-secondary);
+    max-width: 500px;
 
 }
 
 @-webkit-keyframes color-change-sun {
     0% {
-        fill: var(--sun-primary-color);
+        fill: #edc655;
     } 50% {
-        fill: var(--sun-secondary-color);
+        fill: #fcffad;
     } 100% {
-        fill: var(--sun-tertiary-color);
+        fill: #f76414;
     }
 }
 
 @keyframes color-change-sun {
     0% {
-        fill: var(--sun-primary-color);
+        fill: #edc655;
     } 50% {
-        fill: var(--sun-secondary-color);
+        fill: #fcffad;
     } 100% {
-        fill: var(--sun-tertiary-color);
+        fill: #f76414;
     }
 }
 
@@ -256,7 +273,7 @@ button:focus,
     }
 
     .grid__item {
-        background-color: var(--background-color-grid);
+        background-color: lightgray;
         width: auto;
         min-height: auto;
         margin: 0;
