--- a/css/style.production.css
+++ b/css/style.production.css
@@ -286,6 +286,9 @@ button:focus,
         -ms-grid-columns: 1fr;
         grid-template-columns: 1fr;
       }
+      img {
+        max-width: 150px;
+    }
 }
 
 /* Screens between 500 and 750 px */
