Adjust <img> max width on smaller screens
Limited to 150px on screens less than 500px wide

--- a/css/style.production.css
+++ b/css/style.production.css
@@ -285,7 +285,11 @@ button:focus,
     .grid {
         -ms-grid-columns: 1fr;
         grid-template-columns: 1fr;
-      }
+    }
+
+    img {
+        max-width: 150px;
+    }
 }
 
 /* Screens between 500 and 750 px */
