--- a/css/styles.css
+++ b/css/styles.css
@@ -232,7 +232,11 @@ button:focus,
 @media all and (max-width: 500px) {
     .grid {
         grid-template-columns: 1fr;
-      }
+    }
+
+    img {
+        max-width: 150px;
+    }
 }
 
 /* Screens between 500 and 750 px */
