--- a/css/styles.css
+++ b/css/styles.css
@@ -58,7 +58,7 @@ h3 {
     font-size: 18px;
 }
 
-.project_img {
+.project-img {
     max-height: 100px;
     max-width: 100px;
     align-self: center;
