--- a/css/style.production.css
+++ b/css/style.production.css
@@ -219,7 +219,7 @@ button:focus,
             flex: 1 1 100px;
 }
 
-.about {
+.about, .contact {
     max-width: undefined;
     margin: 0 auto;
     text-align: center;
